--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
     codeserver:
         build: ./
-        container_name: code
+        container_name: code_server_v2
         ports:
           # With SSL
           - "443:8443"
